<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">diatra</string>
    <string name="diatra" translatable="false">diatra</string>

    <string name="welcome_big" tools:ignore="StringEscaping">Lets start tracking</string>
    <string name="welcome_small">Start tracking your diabetes.</string>
    <string name="welcome_button">Start now</string>
    <string name="user_title">About you</string>
    <string name="user_title2">Health</string>

    <!-- Home -->

    <string name="day_1">Mon</string>
    <string name="day_2">Tue</string>
    <string name="day_3">Wed</string>
    <string name="day_4">Thu</string>
    <string name="day_5">Fri</string>
    <string name="day_6">Sat</string>
    <string name="day_7">Sun</string>

    <string name="login_home">Log in</string>
    <string name="logout_home">Log out</string>

    <string name="therapy_title">therapy</string>
    <string name="steps_title">steps</string>
    <string name="food_title">intake</string>
    <string name="activity_title">active</string>

    <string name="therapy_small_title">therapy</string>
    <string name="meal_small_title">meal</string>
    <string name="activity_small_title">activity</string>

    <string name="therapy">Therapy</string>
    <string name="steps">Steps</string>
    <string name="steps_genitive">steps</string>
    <string name="intake">Intake</string>
    <string name="active">Active</string>
    <string name="meal">Meal</string>
    <string name="activity">Activity</string>
    <string name="taken">taken</string>
    <string name="hours">hours</string>

    <string name="timeline">Timeline</string>


    <!-- therapy -->

    <string name="type">Type</string>
    <string name="dose">Dose</string>

    <!-- Food -->

    <string name="carbs">Carbs</string>
    <string name="type_of_food">Type of food</string>
    <string name="amount">Amount</string>
    <string name="kcal">kcal</string>

    <!-- Physical activity -->

    <string name="duration">Duration</string>
    <string name="distance">Distance</string>

    <!-- Physical activity -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- User -->

    <string name="personal">Personal</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="health">Health</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="type_of_diabetes">Type of diabetes</string>
    <string name="undefined">Undefined</string>
    <string name="zero">0</string>

    <!-- Login/Registration -->

    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>

    <string name="login_button">Log in</string>
    <string name="register_button">Sign up</string>

    <string name="login_click_text">Sign up.</string>
    <string name="register_click_text">Sign in.</string>

    <string name="login_text">Don\'t have an account?</string>
    <string name="register_text">Already have an account?</string>

    <!-- Settings -->

    <string name="change_language">Change language</string>
    <string name="display_language">Display in another language</string>
    <string name="choose_language">Choose a language</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>

    <string name="automatic_steps">Automatic step counting</string>
    <string name="automatic_steps_text">Step counting on application start</string>
    <string name="automatic_steps_title">Automatically count steps: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="save_data">Saving to Cloud</string>
    <string name="save_data_text">Enable saving to Cloud</string>

    <!-- Array - physical activity -->

    <string name="choose_activity">Choose activity</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="bicycling">Bicycling</string>
    <string name="yoga">Yoga</string>
    <string name="other">Other</string>

    <!-- Array - gender -->

    <string name="choose_gender">Choose gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <!-- Array - type of diabetes -->

    <string name="choose_type">Choose type</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="gestational">Gestational</string>


    <!-- Array - type of therapy -->
    <string name="choose_therapy_type">Choose type</string>
    <string name="continuously">Continuously</string>
    <string name="intravenously">Intravenously</string>
    <string name="orally">Orally</string>

    <!-- Menu -->

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- EDIT TEXT -->
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Navigation -->

    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_therapies">Therapies</string>
    <string name="navigation_add_new_therapy">Add new therapy</string>
    <string name="navigation_edit_profile">Edit profile</string>
    <string name="navigation_activities">Activities</string>
    <string name="navigation_add_new_activity">Add new activity</string>
    <string name="navigation_food">Meals</string>
    <string name="navigation_add_new_food">Add new meal</string>
    <string name="navigation_steps">Steps</string>
    <string name="navigation_login">Log into account</string>
    <string name="navigation_registration">Sign up for an account</string>

    <string name="addTherapyTitle">Add new therapy</string>

    <!-- MISC -->

    <string name="enterAllData">Enter all data</string>
    <string name="therapyAdded">Therapy added</string>
    <string name="userAdded">User added</string>


</resources>