<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_marginBottom="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSignUpEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/textViewSignUptitle"
                tools:layout_editor_absoluteX="91dp" />

            <EditText
                android:id="@+id/edit_text_sign_up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/textViewSignUpEmailText"
                tools:layout_editor_absoluteX="80dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_sign_up_email"
                tools:layout_editor_absoluteX="80dp" />

            <EditText
                android:id="@+id/edit_text_sign_up_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView17"
                tools:layout_editor_absoluteX="80dp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                android:text="@string/register_button"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_sign_up_password" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_view_register_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/light_gray"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:text="@string/register_text"
                    />

                <TextView
                    android:id="@+id/text_view_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"
                    android:text="@string/register_click_text"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
                    tools:layout_editor_absoluteX="80dp" />

            </LinearLayout>




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>