<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.user.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="31dp"
        android:overScrollMode="never"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/button_edit_user"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_edit" />

            </RelativeLayout>

            <TextView
                android:id="@+id/personal_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/personal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>


            <LinearLayout
                android:id="@+id/linear_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/gender"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        app:layout_constraintTop_toBottomOf="@+id/ll1" />

                    <TextView
                        android:id="@+id/text_view_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="8dp"
                        android:text="@string/undefined"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        app:layout_constraintTop_toBottomOf="@+id/textView1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/age"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_gender" />

                    <TextView
                        android:id="@+id/text_view_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="8dp"
                        android:text="@string/zero"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/health_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/linear_horizontal"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/height"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/health_text_view" />

            <TextView
                android:id="@+id/text_view_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/zero"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/weight"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/text_view_height" />

            <TextView
                android:id="@+id/text_view_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/zero"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/type_of_diabetes"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:layout_constraintTop_toBottomOf="@+id/text_view_weight" />

            <TextView
                android:id="@+id/text_view_type_of_diabetes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/undefined"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>